# philosophers

./: .gitignore  README.md  notes.txt
philo/: CMakeLists.txt  Makefile
philo/inc/: philo.h
philo/src/: cleanup.c  error_handler.c  inits.c  logger.c  main.c  parse.c  routine_utils.c  routines.c  time_utils.c  utils.c  watchdog.c
philo/tests/: error_handler_test.c  error_handler_test.cpp
philo_bonus/: Makefile  notes.txt
philo_bonus/inc/: philo_bonus.h
philo_bonus/src/: inits.c  inits_bonus.c  main.c  parse_bonus.c  routines_bonus.c  time_utils_bonus.c  utils_bonus.c
